--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ main {
 }
 
 .forecast-header {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: bolder;
 }
 
@@ -164,17 +164,65 @@ main {
 
 h2 {
   text-align: center;
+  font-size: 28px;
 }
 
 h3 {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 b {
-  font-size: 20px;
+  font-size: 24px;
   margin-left: 3px;
 }
 
-.search section {
-  padding: 15px;
+p {
+  text-align: center;
+  font-weight: bold;
+}
+
+#cityname,
+#currentdate {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  display: block;
+  width: 100%;
+  font-weight: bold;
+  font-size: 42px;
+}
+
+.searchButton {
+  background-color: #53a8b6;
+  color: whitesmoke;
+  font-size: 16px;
+  font-weight: bolder;
+  border-radius: 4%;
+  transition-duration: 0.4s;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.searchButton:hover {
+  box-shadow: 0 14px 18px 0 rgba(1, 1, 1, 0.35),
+    0 20px 54px 0 rgba(1, 1, 1, 0.38);
+}
+
+.container {
+  width: calc(100% - 6px);
+  min-height: 245px;
+  margin-bottom: 10px;
+  margin-top: 4px;
+}
+
+#searchsection {
+  margin-top: 6px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+#searched-history {
+  margin-top: 8px;
 }
